<resources>
    <string name="app_name">Bugs Bunny</string>

    <string name="point_carrot">10 point</string>

    <string name="point_cabbage">30 point</string>

    <string name="point_wolf">Game Over!</string>

    <string name="btn_start">START</string>

    <string name="score">Score : %d</string>

    <string name="tap_to_start">Tap to Start</string>

    <string name="result_title">! GAME OVER !</string>

    <string name="result_score">%d</string>

    <string name="high_score">High Score : %d</string>

    <string name="btn_try_again">TRY AGAIN</string>



</resources>