<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/forest2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/app_name"
        android:textColor="#040404"
        android:textSize="32sp" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bugsbunny2"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/carrot"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_carrot"
                android:textSize="25sp"
                android:paddingLeft="10dp"
                android:textColor="#040404"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/cabbage"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_cabbage"
                android:textSize="25sp"
                android:paddingLeft="10dp"
                android:textColor="#040404"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/wolf"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_wolf"
                android:textSize="25sp"
                android:paddingLeft="10dp"
                android:textColor="#040404"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:textSize="15dp"
        android:layout_marginTop="60dp"
        android:onClick="startGame"
        tools:ignore="SpUsage" />


</LinearLayout>





















